@@ -2,7 +2,6 @@ package com.skills.neki.services;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -14,55 +13,50 @@ import com.skills.neki.repositores.SkillsRepository;
 @Service
 public class SkillsService {
 
+    private static final int MAX_URL_LENGTH = 2000; // Um limite arbitrário para URLs
+
     @Autowired
-    private SkillsRepository repository;
+    private SkillsRepository skillsRepository;
 
-    public Skills saveSkills(SkillsDTO dto) {
+    public Skills saveSkills(SkillsDTO skillsDTO) {
+        validateSkillsDTO(skillsDTO);
         Skills skills = new Skills();
-        skills.setNome(dto.getNome());
-        skills.setDescricao(dto.getDescricao());
-        skills.setImagemUrl(dto.getImagemUrl());
-        skills.setTecnologia(dto.getTecnologia());
-
-        return repository.save(skills);
+        skills.setNome(skillsDTO.getNome());
+        skills.setDescricao(skillsDTO.getDescricao());
+        skills.setImagemUrl(skillsDTO.getImagemUrl());
+        skills.setTecnologia(skillsDTO.getTecnologia());
+        return skillsRepository.save(skills);
     }
 
     public List<SkillsDTO> getAllSkills() {
-        return repository.findAll()
-                         .stream()
-                         .map(this::convertToDto)
-                         .collect(Collectors.toList());
+        List<Skills> skills = skillsRepository.findAll();
+        // Converte Skills para SkillsDTO
+        return skills.stream().map(skill -> new SkillsDTO(skill)).toList();
     }
 
-    public Optional<Skills> updateSkills(Long id, SkillsDTO dto) {
-        Optional<Skills> optionalSkills = repository.findById(id);
-        if (optionalSkills.isPresent()) {
-            Skills skills = optionalSkills.get();
-            skills.setNome(dto.getNome());
-            skills.setDescricao(dto.getDescricao());
-            skills.setImagemUrl(dto.getImagemUrl());
-            skills.setTecnologia(dto.getTecnologia());
-           
-
-            return Optional.of(repository.save(skills));
-        } else {
-            return Optional.empty();
-        }
+    public Optional<Skills> updateSkills(Long id, SkillsDTO skillsDTO) {
+        validateSkillsDTO(skillsDTO);
+        return skillsRepository.findById(id).map(skills -> {
+            skills.setNome(skillsDTO.getNome());
+            skills.setDescricao(skillsDTO.getDescricao());
+            skills.setImagemUrl(skillsDTO.getImagemUrl());
+            skills.setTecnologia(skillsDTO.getTecnologia());
+            return skillsRepository.save(skills);
+        });
     }
 
     public void deleteSkills(Long id) {
-        repository.deleteById(id);
+        skillsRepository.deleteById(id);
     }
 
-    private SkillsDTO convertToDto(Skills skills) {
-        SkillsDTO dto = new SkillsDTO();
-        dto.setIdSkill(skills.getIdSkill());
-        dto.setNome(skills.getNome());
-        dto.setDescricao(skills.getDescricao());
-        dto.setImagemUrl(skills.getImagemUrl());
-        dto.setTecnologia(skills.getTecnologia());
-      
+    public boolean existsById(Long id) {
+        return skillsRepository.existsById(id);
+    }
 
-        return dto;
+    private void validateSkillsDTO(SkillsDTO skillsDTO) {
+        if (skillsDTO.getImagemUrl() != null && ((String) skillsDTO.getImagemUrl()).length() > MAX_URL_LENGTH) {
+            throw new IllegalArgumentException("URL da imagem é muito longa");
+        }
+        // Adicione outras validações conforme necessário
     }
 }
